js/js.translator/testData/incremental/invalidation/toplevelPropertiesWithIntraModuleInliner/lib2/l2inlineGlobalVar.12.kt
inline fun inlineGlobalVarGetWrapper() =  inlineGlobalVar

inline fun inlineGlobalVarSetWrapper(v: String) { inlineGlobalVar = v }

inline fun inlineGlobalVarWrapper(): String {
    inlineGlobalVarSetWrapper("1")
    return inlineGlobalVarGetWrapper()
}
